<resources>
    <string name="app_name">BertSpeak</string>
    <!-- SYstem-level variables -->
    <string name="appbar_scrolling_view_behavior">true</string>
    <!-- Labels in the navigation bar -->
    <string name="cover_tab_label">Cover</string>
    <string name="robot_log_tab_label">Logs</string>
    <string name="settings_tab_label">Settings</string>
    <string name="tables_tab_label">Tables</string>
    <string name="transcript_tab_label">Transcript</string>
    <!-- Titles as they appear at the top of each page -->
    <string name="action_settings">Settings</string>
    <string name="fragmentCoverLabel">Bert"</string>
    <string name="fragmentLogsLabel">Robot Logs</string>
    <string name="fragmentSettingsLabel">Configuration Settings</string>
    <string name="fragmentTableTabLabel">Table</string>
    <string name="fragmentTranscriptLabel">Transcript</string>
    <!-- Strings for Cover tab-->
    <string name="coverParameterBluetooth">Bluetooth</string>
    <string name="coverParameterSocket">Socket</string>
    <string name="coverParameterVoice">Voice</string>

    <!-- Strings for BluetoothHandler Log tab-->
    <string name="logButtonClear">Clear</string>
    <string name="logButtonFreeze">Freeze</string>
    <string name="logButtonThaw">Unfreeze</string>
    <!-- Notification Button Labels -->
    <string name="notificationLabel">Speech Processing via Bluetooth connection to main robot.</string>
    <string name="notificationDescription">Generally spoken text processing is automatic and runs continuously. It can, however, be turned on and off via the buttons below </string>
    <string name="notificationKey">DispatchServiceRunning</string>
    <!-- Buttons on the DispatchService notification dialog -->
    <string name="notificationMute">Mute</string>
    <string name="notificationReset">Reset</string>
    <string name="notificationStop">Stop</string>
</resources>
