<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_speech_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationReset"/>

    <Button
        android:id="@+id/mute_speech_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationMute"/>

    <Button
        android:id="@+id/stop_speech_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationStop"/>


</LinearLayout>
